--- a/src/app/shared/components/form-reseach-page/form-reseach-page.component.html
+++ b/src/app/shared/components/form-reseach-page/form-reseach-page.component.html
@@ -17,8 +17,9 @@
             </div>
 
             <div class="form-disclaimer">
+                <input type="checkbox" id="privacy-consent">
                 <p>
-                    ☐Lors de la planification avec le MAGASIN, j'accepte de recevoir d'une manière ou d'une autre
+                    Lors de la planification avec le MAGASIN, j'accepte de recevoir d'une manière ou d'une autre
                     que Huang Car me contacte personnellement uniquement lors de la vente de véhicules avec le texte
                     de modalité hybride.
                 </p>
