--- a/src/app/contact-page/contact-page.component.scss
+++ b/src/app/contact-page/contact-page.component.scss
@@ -54,25 +54,75 @@
     flex: 1;
     display: flex;
     margin-bottom: 0;
+    overflow:hidden;
   }
 
   .car-image img {
-    width: 100%;
+    width: 120%;
     height: auto;
     margin-bottom: 0;
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 800px) {
     .contact-container {
       flex-direction: column;
       width: 90%;
     }
 
+    .contact-button{
+      width: 100%;
+    }
+    .contact-container {
+      flex-direction: column-reverse;
+     
+    }
+    .contact-content{
+      width: 100% !important;
+    }
+   
+    .contact-container{
+      margin-top: 20%!important;
+      width: 100%;
+    }
+    .car-image {
+      width: 100%;
+      overflow:hidden;
+    }
+  
+    .car-image img {
+      width: 120%;
+    }
+  
+  
+  }
+
+  @media (max-width: 1000px) {
+
     .contact-buttons {
       max-width: 100%;
     }
+    
+    .contact-content{
+      margin-left: 5%;
+    }
+    .contact-button {
+      width: 80%;
+    }
+    .contact-container{
+      margin-top: 5%;
+      width: 100%;
+    }
+    .car-image {
+      width: 100%;
+      overflow:hidden;
+    }
+  
+    .car-image img {
+      width: 120%;
+    }
+  
+  
   }
-
   
   .contact-form{
     width: 100%;    
