--- a/src/app/detailsmodels-page/detailsmodels-page.component.scss
+++ b/src/app/detailsmodels-page/detailsmodels-page.component.scss
@@ -72,7 +72,7 @@
     font-size: 20px;
   }
   
-  .contact-button {
+  .contact-button,.view3D {
     background-color: #000;
     color: #fff;
     border: none;
@@ -87,10 +87,20 @@
     gap: 10px;
   }
   
+  .view3D{
+    background-color: gray !important;
+  }
   .contact-button:hover {
     background-color: #333;
+    color: rgb(212, 211, 211);
   }
-  
+  .view3D:hover {
+    background-color: rgb(165, 164, 164) !important;
+  }
+  .button-action{
+    display: flex;
+    gap: 10px;
+  }
   .car-image {
     flex: 1;
     display: flex;
