--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,8 @@
       <!-- Colonne 1 -->
       <div class="footer-column">
         <div class="footer-logo">
-            <img src="images/touringcars.png">
+          <div class="imgLogo"> <img src="images/Logo-TC.png">
+          </div> 
             <p>Qualité, Sécurité, Transparence</p>
             <p>Elegance, Confort.</p>
         </div>
@@ -22,7 +23,7 @@
         <ul>
           <li><a href="#">WhatsApp</a></li>
           <li><a href="mailto:contato@touringcars.com.br">contato&#64;touringcars.com.br</a></li>
-          <li>(81) 3512-9411</li>
+          <li>(237) 699856268</li>
         </ul>
       </div>
   
@@ -30,10 +31,12 @@
       <div class="footer-column">
         <h3>Inscrivez-vous</h3>
         <p>Signalez votre email pour recevoir les dernières nouvelles de Touring Cars..</p>
-        <form class="newsletter-form">
-          <input type="email" placeholder="E-mail" required>
-          <button type="submit"><i class="fa-solid fa-chevron-right"></i></button>
-        </form>
+        <div class="form">
+          <form class="newsletter-form">
+            <input type="email" placeholder="E-mail" required>
+            <button type="submit"><i class="fa-solid fa-chevron-right"></i></button>
+          </form>
+        </div>
       </div>
     </div>
     <div class="footer-bottom">
