--- a/src/app/shared/components/login-form-page/login-form-page.component.scss
+++ b/src/app/shared/components/login-form-page/login-form-page.component.scss
@@ -8,6 +8,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+  blur : 5px;
   justify-content: center;
   align-items: center;
   z-index: 1000;
@@ -142,4 +143,8 @@ input {
   max-height: 20%;
   
   
+}
+
+.close-button:hover{
+  color: gray;
 }
