--- a/src/app/detailsmodels-page/detailsmodels-page.component.html
+++ b/src/app/detailsmodels-page/detailsmodels-page.component.html
@@ -11,6 +11,9 @@
         <p>Annnée <span>{{ car.year }}</span></p>
         <p>Km <span>{{ car.km }}</span></p>
       </div>
+      <div class="car-image-mobile">
+        <img [src]="car?.modelImage" alt="{{ car?.name }}" />
+      </div>
       <p class="price"><span>Mensualité : FCFA</span> {{ car.price }}</p>
     <div class="button-action">
       <button class="view3D"  (click)="open3DModal()"><span>Voir le modèle 3D</span><i class="fa-solid fa-eye "></i></button>
