--- a/src/app/model-page/model-page.component.scss
+++ b/src/app/model-page/model-page.component.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 .container {
-  margin-top: 5% !important;
+  margin-top: 8% !important;
   padding: 20px;
   width: 75%;
   margin: 0 auto;
@@ -30,7 +30,13 @@
     margin: 0;
   }
 }
-
+@media (max-width : 870px) {
+  .header-section h1{
+      font-size: 18px;
+  }
+  
+  
+}
 .filter-toggle {
   // display: none;
   padding: 8px 25px;
@@ -266,10 +272,6 @@
 @media (max-width: 768px) {
   .filter-toggle {
     display: flex;
-  }
-
-  .header-section h1 {
-    font-size: 20px;
   }
 
   .cars-grid {
