--- a/src/app/shared/components/login-form-page/login-form-page.component.scss
+++ b/src/app/shared/components/login-form-page/login-form-page.component.scss
@@ -8,7 +8,6 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  blur : 5px;
   justify-content: center;
   align-items: center;
   z-index: 1000;
@@ -28,6 +27,17 @@
   animation: fadeIn 0.3s ease-in-out;
 }
 
+@media(max-width : 560px){
+  .modal-content{
+    width: 80%;
+  }
+  .loginimg{
+    display: none !important;
+  }
+  .yo{
+    width: 100% !important;
+  }
+}
 .close-button {
   position: absolute;
   top: 10px;
