Solve some problems on detailsModelPage file

--- a/src/app/detailsmodels-page/detailsmodels-page.component.html
+++ b/src/app/detailsmodels-page/detailsmodels-page.component.html
@@ -12,7 +12,7 @@
         <p>Km <span>{{ car.km }}</span></p>
       </div>
       <div class="car-image-mobile">
-        <img [src]="car?.modelImage" alt="{{ car?.name }}" />
+        <img [src]="car.modelImage" alt="{{ car.name }}" />
       </div>
       <p class="price"><span>Mensualité : FCFA</span> {{ car.price }}</p>
     <div class="button-action">
