--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -551,7 +551,7 @@ body{
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;
-    padding: 0 60px;
+    padding: 0 50px;
   }
   
   .highlight-subtitle {
@@ -565,10 +565,11 @@ body{
   
   .highlight-text {
     font-family: 'Poppins', sans-serif;
-    font-size: 21px;
+    font-size: 16px;
     font-weight: 500;
     text-align: justify;
-
+    padding: 14px;
+    box-sizing: border-box;
   }
   
 
