--- a/src/app/detailsmodels-page/detailsmodels-page.component.scss
+++ b/src/app/detailsmodels-page/detailsmodels-page.component.scss
@@ -22,14 +22,38 @@
 
   }
   
-@media(max-width : 1200px){
+  @media(max-width : 1200px){
+    .getback {
+      margin-top: 12%;
+    }
+    @media only screen and (orientation: landscape) {
+      .getback {
+        margin-top: 8%;
+      }
+    }
+  }
+@media(max-width : 1100px){
+  .car-image-mobile {
+    display: block !important;
+    max-width: 86%;
+    margin-left: 20%;
+    
+  }
+  
+  .car-image{
+    display:none !important;
+  }
   .getback {
     margin-top: 12%;
   }
   .detailsModel{
     height: 78vh;
   }
- 
+  @media only screen and (orientation: landscape) {
+    .getback {
+      margin-top: 8%;
+    }
+  }
   .contact-button,.view3D { 
     padding: 0.8rem 0.8rem !important;
     font-size: 14px !important;
