--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-
-
 body{
     font-family: "poppins" , sans-serif;
 }
@@ -166,7 +163,7 @@ body{
   }
 
   .button-text {
-      font-size: 18px;
+      font-size: 25px;
   }
   .mobile-image {
     display: block;
@@ -188,7 +185,7 @@ body{
     top: auto;
 }
 .button-container {
-  width: 85% !important;
+  width: 90% !important;
   margin: auto !important;
   margin-top: 40px !important;
   margin-bottom: 10px !important;
@@ -199,9 +196,9 @@ body{
   border-radius: 25px !important;
   cursor: pointer;
   text-align: center !important;
-  padding: 5px 15px !important;
+  padding: 8px 20px !important;
   height: 35px;
-  width: 50% !important;
+  width: 55% !important;
   margin: auto !important;
 
 }
@@ -227,7 +224,8 @@ body{
 
 }
   .section-header {
-    height: 85vh !important;
+    // height: 85vh !important;
+    height: auto !important;
     display: flex !important;
     align-items: center !important;
   }
@@ -239,12 +237,12 @@ body{
   
 
   .button-text {
-      font-size: 15px !important;
+      font-size: 14px !important;
   }
   .mobile-image {
     display: block;
     width: 100% !important;
-    height: 215px !important;
+    height: 276px !important;
     margin: initial ;
     position: relative;
     overflow: hidden;
@@ -337,10 +335,11 @@ body{
 
     }
     h2 {
-      font-size: 1.8rem !important;
+      font-size: 1.6rem !important;
       margin-bottom: 1rem !important;
       width: 90%;
       margin: auto;
+      margin-top: 1rem;
       }
 
   }
