--- a/src/app/model-page/model-page.component.scss
+++ b/src/app/model-page/model-page.component.scss
@@ -1,6 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-
 .container {
   margin-top: 8% !important;
   padding: 20px;
@@ -34,9 +32,15 @@
   .header-section h1{
       font-size: 18px;
   }
-  
+}
+
+@media (max-width : 810px){
+  .container{
+    width: 90% !important;
+  }
   
 }
+
 .filter-toggle {
   // display: none;
   padding: 8px 25px;
